--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.10.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-slot": "^1.1.2",
     "@sentry/nextjs": "^8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^7.1.5",
