--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
     "posthog-js": "^1.215.6",
+    "posthog-node": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
