--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ai-sdk/replicate": "^0.1.11",
     "@clerk/nextjs": "^6.10.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@sentry/nextjs": "^8",
